--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "5.*",
-        "google/apiclient": "dev-master"
+        "google/apiclient": "1.0.*@beta"
     },
     "autoload": {
         "classmap": [
